用別的電腦測試

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.background": "#462605",
-    "titleBar.activeBackground": "#613506",
-    "titleBar.activeForeground": "#FEFBF7"
+    "activityBar.background": "#0A3516",
+    "titleBar.activeBackground": "#0D4A1F",
+    "titleBar.activeForeground": "#F2FCF5"
   }
 }
